test/fail/Imports/Module.agda
-- Andreas, 2014-09-01
-- This module exports a module M

module Imports.Module where

module M where
